# fastbook

./: 01_intro.ipynb  02_production.ipynb  pyproject.toml
My_projects/: Optimist_identifier.ipynb
