[tool.poetry]
name = "fastbook"
version = "0.1.0"
description = "Env to run DeepLearning Practica Learning examples"
authors = ["Felipe Sodré <felipe.b4rros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.6"
fastai = "^2.7.14"
jupyterlab-extensions = "^0.0.1"
ipywidgets = "^8.1.2"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
